--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": " Learning Node, Express, and MongoDB",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Emmanuel Owolabi",
   "license": "ISC",
